gitops/clusters/homelab/apps/public/shopify-gpt-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopify-gpt-assistant
  namespace: public
  labels:
    app: shopify-gpt-assistant
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 10
  selector:
    matchLabels:
      app: shopify-gpt-assistant
  template:
    metadata:
      labels:
        app: shopify-gpt-assistant
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      containers:
        - name: shopify-gpt-assistant
          image: ghcr.io/kalpak44/shopify-gpt-assistant:32bdb61
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 512Mi
            limits:
              memory: 512Mi
